--- a/_config.yml
+++ b/_config.yml
@@ -13,29 +13,34 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Iptech-Blog
-email: igordzu@yandex.ru
-description: >- # this means to ignore newlines until "baseurl:"
-  My it notes.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  garry1287
+title: Iptech Blog
+description: > # this means to ignore newlines until "baseurl:"
+  Мои заметки за годы работать
+baseurl: ""
+url: "https://garry1287.github.io"
+permalink: /:year/:month/:day/:title
+repository: garry1287/garry1287.github.io
+paginate: 5
+
+# MatJek specific configurations
+github_profile: "https://github.com/garry1287"
+user: "Igor Dzyuin"
+user_email: "igor.dzyuin@gmail.com"
+contact_url: "https://goo.gl/tVljbV"
+google_tracking_id: "UA-96359860-1"
+google_site_verification: "UA-96359860-1"
+disqus_shortname: "matjek"
 
 # Build settings
 markdown: kramdown
-theme: minima
-plugins:
+gems:
   - jekyll-feed
-
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-sitemap
+exclude:
+  - Gemfile
+  - Gemfile.lock
+sass:
+  style: compressed
+future: true
