--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Iptech Blog
 description: > # this means to ignore newlines until "baseurl:"
-  Мои заметки за годы работать
+  Мои заметки за годы работы
 baseurl: ""
 url: "https://garry1287.github.io"
 permalink: /:year/:month/:day/:title
